Remove Hamcrest matchers in favour of AssertJ assertions. (#596)
* Remove Hamcrest matchers in favour of AssertJ assertions.

Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>

* Address some sonar warnings.

Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>

* Address some additional sonar warnings.

Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>

---------

Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>